# bullet-trade

./: MANIFEST.in  env.backtest.example  env.example  env.live.example  pyproject.toml
bullet_trade/: __version__.py
bullet_trade/broker/: simulator.py
bullet_trade/cli/: main.py
bullet_trade/compat/: jqdata.py
bullet_trade/core/: api.py  engine.py  live_engine.py
bullet_trade/data/: api.py
bullet_trade/data/providers/: base.py  jqdata.py  miniqmt.py  remote_qmt.py  tushare.py
bullet_trade/notebook/: 04.joinquant_remote_live_trade.ipynb
docs/: contributing.md  index.md
docs/data/: DATA_PROVIDER_GUIDE.md
helpers/: __init__.py
tests/: test_strategies.py
tests/data/providers/: test_miniqmt_vs_jqdata.py
tests/strategies/: config.yaml  data_api_temporal_guards.py  simple_ma_strategy.py
tests/unit/: test_get_price_panel.py
